# running-club-backend

./: .env.example  .envrc  .gitignore  ARCHITECTURE.md  CLI.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  aws-chat-cost-estimation.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  running-training-prompt.md
.github/: COPILOT_SETUP.md  copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  python.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: code-review.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: copilot-setup-steps.yml
entrypoints/: __init__.py  asgi.py  cli.py  lambda_handler.py
src/application/dtos/: __init__.py  strava_dto.py  task_dto.py  training_plan_dto.py  user_dto.py
src/application/use_cases/: __init__.py  activity_sync_use_case.py  admin_use_case.py  authentication_use_case.py  coach_use_case.py  customer_use_case.py  strava_integration_use_case.py  task_use_case.py  training_plan_use_case.py
src/domain/entities/: __init__.py  admin.py  base.py  coach.py  customer.py  enums.py  strava_activity.py  strava_connection.py  task.py  training_day.py  training_plan.py  user.py
src/domain/repositories/: __init__.py  activity_repository.py  (+6 more)
src/infrastructure/: container.py
tests/: __init__.py  test_api.py
(+32 files in other folders)
